<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ymnd.app.checklibraryapp.MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/welcome_text" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/welcomeText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/fontSizeLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/divider"
        android:textColor="@android:color/black"
        android:text="@string/font_size_slider" />

    <SeekBar
        android:id="@+id/fontSizeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:max="6"
        android:progress="3"
        android:layout_toRightOf="@+id/fontSizeLabel"/>

    <Switch
        android:id="@+id/nightModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fontSizeSlider"
        android:text="@string/night_mode_switch" />

    <Button
        android:id="@+id/saveButton"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nightModeSwitch"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/getEmojiButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/saveButton"
        android:text="@string/get_emoji_button"/>

    <ImageView
        android:id="@+id/emojiImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/getEmojiButton"
        android:layout_alignTop="@id/getEmojiButton"
        android:layout_alignBottom="@id/getEmojiButton"
        />

    <Button
        android:id="@+id/lynxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getEmojiButton"
        android:text="@string/lynx_button" />

    <!--<com.github.pedrovgs.lynx.LynxView-->
    <!--xmlns:lynx="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="100dp"-->
    <!--android:layout_below="@+id/lynxButton"-->
    <!--lynx:filter="Lynx"-->
    <!--lynx:max_traces_to_show="1500"-->
    <!--lynx:text_size="12sp"/>-->


</RelativeLayout>
